# rzip

./: .gitignore  README.md
project/: Cargo.toml
project/src/: main.rs  test.txt
rlib/: Cargo.toml
rlib/src/: lib.rs
