[package]
name = "rlib"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
zip = "0.6.2"
walkdir = "2"
bzip2-sys = "0.1.11+1.0.8"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
